--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <title>Optiacademiq+</title>
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/public/uvbf-login.png" type="image/png" />
+    <link rel="icon" href="/uvbf-login.png" type="image/png" />
     <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
   </head>
   <body>
