--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/uvbf-login.png" type="image/png" />
     <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
+     <style type="">
+      /* .form-label{
+        margin-bottom: 0;
+      } */
+     </style>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app </noscript>
