--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 * Copyright (c) 2024 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
 -->
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8" />
@@ -15,7 +15,7 @@
   <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template" />
   <meta name="author" content="Łukasz Holeczek" />
   <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React" />
-  <title>Optiacademiq+</title>
+  <title>Cartesim</title>
   <link rel="manifest" href="/manifest.json" />
   <link rel="icon" href="/uvbf-login.png" type="image/png" />
   <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
